<resources>
    <string name="app_name">GAMON</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="email">Email</string>
    <string name="ketik_ulang_kata_sandi">Ketik ulang kata sandi</string>
    <string name="daftar">Daftar</string>
    <string name="no_hp">No. Hp</string>
    <string name="masuk">Masuk</string>
    <string name="mohon_masukan_email">Mohon masukan email</string>
    <string name="email_unvalid">Mohon masukan email yang valid</string>
    <string name="masukan_password">Mohon masukan password</string>
    <string name="berhasil_masuk">Berhasil masuk</string>
    <string name="masuk_gagal">Gagal masuk</string>
    <string name="minimal_karakter">Password minimal harus terdiri dari 6 karakter</string>
    <string name="masukan_nohp">Mohon masukan no hp</string>
    <string name="masukan_nama_lengkap">Mohon masukan nama lengkap</string>
    <string name="gagal_daftar">Gagal mendaftar</string>
    <string name="berhasil_daftar">Berhasil mendaftar</string>
    <string name="beranda">Beranda</string>
    <string name="transaksi">Transaksi</string>
    <string name="riwayat">Riwayat</string>
    <string name="akun">Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama">Nama</string>
    <string name="ganti_sandi">Ganti Sandi</string>
    <string name="poin">POIN</string>
    <string name="keluar">Keluar</string>
    <string name="profile">Profil</string>
    <string name="simpan">Simpan</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="ubah">Ubah</string>
    <string name="kata_sandi_lama">Kata Sandi lama</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="ketik_ulang_kata_sandi_baru">Ketik Ulang Kata Sandi Baru</string>
    <string name="voucher">Voucher</string>
    <string name="beli_voucher">Beli Voucher</string>
    <string name="voucher_saya">Voucher Saya</string>
    <string name="poin_saya">Poin Saya</string>
    <string name="nama_bank_sampah">Nama Bank Sampah</string>
    <string name="lokasi">Jl. Cempaka 2 No. 16 Malang, Jawa Timur</string>
    <string name="tambah">+</string>
    <string name="kembali">Kembali</string>
    <string name="plus">+</string>
    <string name="p">P</string>
    <string name="rupiah">Rp. </string>
    <string name="kilogram"> Kg</string>
    <string name="title_activity_maps">Map</string>
    <string name="telepon">Telepon</string>
    <string name="scan">Scan</string>
    <string name="kertas">Kertas</string>
    <string name="botol">Botol</string>
    <string name="menuju_lokasi">Menuju Lokasi</string>
    <string name="tutup">Tutup</string>
    <string name="detail_bank_sampah">Detail Bank Sampah</string>
    <string name="gunakan">Gunakan</string>
    <string name="gunakan_voucher">Gunakan Voucher</string>
    <string name="belum_punya_akun_daftar">Belum punya akun ? Daftar</string>
    <string name="disini"> disini.</string>
    <string name="sudah_punya_akun_masuk">Sudah punya akun ? Masuk</string>
    <string name="tunjukan_qr">Tunjukkan QRcode kepada petugas Bank Sampah</string>
    <string name="saldo">Saldo</string>
    <string name="bank">Bank Sampah</string>
    <string name="bank_sampah">Bank</string>
    <string name="tarik_langsung">Tarik Langsung</string>
    <string name="tabung">Tabung</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="jumlah">Jumlah</string>
    <string name="total_saldo">Total Saldo</string>
    <string name="daftar_menjadi_nasabah">Daftar Menjadi Nasabah</string>
    <string name="pendaftaran">Melakukan pendaftaran sebagai nasabah</string>
    <string name="debit">DEBIT</string>
    <string name="confirm_password_not_match">Password yang dimasukan tidak sama</string>
    <string name="sudah_terdaftar">Email yang digunakan sudah terdaftar</string>
    <string name="edit">EDIT</string>

</resources>
