<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailAkun.EditAkunActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/back_edt_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24dp"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center"
            />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_edit_nama"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"
        android:lineSpacingExtra="1.3sp"
        android:text="@string/nama"
        />
    <EditText
        android:id="@+id/edt_nama"
        android:layout_below="@+id/tv_edit_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:inputType="textPersonName"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_edit_email"
        android:layout_below="@+id/edt_nama"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"
        android:lineSpacingExtra="1.3sp"
        android:text="@string/email"
        />
    <EditText
        android:id="@+id/edt_email"
        android:layout_below="@+id/tv_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:inputType="textEmailAddress"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_edit_notlp"
        android:layout_below="@+id/edt_email"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"
        android:lineSpacingExtra="1.3sp"
        android:text="@string/telepon"
        />
    <EditText
        android:id="@+id/edt_notlp"
        android:layout_below="@+id/tv_edit_notlp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:inputType="phone"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btn_save_profile"
        android:layout_marginTop="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_border"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edt_notlp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/simpan" />
</RelativeLayout>