<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.BankDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">


    <ImageView
        android:id="@+id/back_detail_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_24dp"/>

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:text="@string/bank"
        android:textColor="@android:color/white"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_gravity="center"
        />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_detail_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/iv_foto_bank_sampah_detail"
            android:layout_width="96dp"
            android:layout_height="64dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/icon"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nama_bank_sampah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Nama Bank Sampah"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_alamat_bank_sampah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="alamat bank sampah" />

            <TextView
                android:id="@+id/tv_tanggal_gabung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="Tanggal Gabung"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_riwayat_transaksi_detail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_detail_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/greyish"
        android:lineSpacingExtra="2sp"
        android:gravity="center_horizontal"
        android:text="@string/riwayat_transaksi"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_below="@+id/tv_riwayat_transaksi_detail"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/ll_kategori_tabungan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/greyish"
            android:lineSpacingExtra="1.3sp"
            android:gravity="center_horizontal"
            android:text="@string/transaksi"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/greyish"
            android:lineSpacingExtra="1.3sp"
            android:gravity="center_horizontal"
            android:text="@string/jumlah"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/greyish"
            android:lineSpacingExtra="1.3sp"
            android:gravity="center_horizontal"
            android:text="@string/total_saldo"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_view_detail_bank"
        android:layout_below="@+id/ll_kategori_tabungan"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:background="@color/tree_green"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_detail_tabungan"
        android:layout_below="@id/ll_view_detail_bank"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>