<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        app:cardElevation="6dp"
        android:id="@+id/cv_history"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_nama_bank_sampah_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="1.3sp"
                    android:text="@string/nama_bank_sampah"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_alamat_bank_sampah_history"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_nama_bank_sampah_history"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="30dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="1.3sp"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/lokasi"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_tgl_transaksi_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_alamat_bank_sampah_history"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="1.3sp"
                    android:text="02 Agustus 2018 | 14:32"
                    android:textColor="@color/inactive_button"
                    android:textSize="13sp"
                    android:textStyle="normal" />

            </RelativeLayout>

            <TextView
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:id="@+id/tv_poin_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="2sp"
                android:text="@string/poin"
                android:textColor="@color/tree_green"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>